# ptxdist-raspberry-pi

./: .gitignore  .gitmodules  README  README.RaspberryPi
configs/: ptxconfig
configs/platform-raspberrypi/: kernelconfig-3.11.6  platformconfig
configs/platform-raspberrypi/patches/linux-3.11.6/: 0001-Main-bcm2708-linux-port.patch  0004-bcm2708-watchdog-driver.patch  0008-bcm2708-alsa-sound-driver.patch  0009-Allow-mac-address-to-be-set-in-smsc95xx.patch  0012-sdhci-bcm2708-speed-up-DMA-sync.patch  0013-sdhci-bcm2708-remove-custom-clock-handling.patch  0015-sdhci-bcm2708-add-allow_highspeed-parameter.patch  (+48 more)
configs/platform-raspberrypi/rules/: qt5.make  rpi-userland.make
configs/platform-rpi2/: config.txt  kernelconfig-3.18.8  kernelconfig-3.18.8.busted  kernelconfig-4.1.10  kernelconfig-4.1.12  kernelconfig-4.1.15  platformconfig
configs/platform-rpi2/rules/: image-boot-vfat.make  qt5.in  qt5.make  rpi-userland.in  rpi-userland.make
configs/raspberrypi-2011.11.0/: kernelconfig-3.1.9  platformconfig
local_src/raspi_test-0.2/: CMakeLists.txt  simpletest_raspicam.cpp  simpletest_raspicam_cv.cpp  test_raspicam.cpp  test_raspicam_cv.cpp
patches/opencv-2.4.9/: 0001-change_openmp_detection.patch  series
projectroot/etc/: group  passwd  shadow
projectroot/etc/ssh/: sshd_config
rules/: host-cmake.make  k6rss.in  k6rss.make  libbcm2835.in  libbcm2835.make  libgomp.in  libgomp.make  libnl.make  opencv.in  opencv.make  qt5.in  qt5.make  raspi_test.in  raspi_test.make  raspicam.in  raspicam.make
scripts_rpi/: config.ini  createSDCardRpi.sh
(+457 files in other folders)
